# zamonia

./: .gitignore  LICENSE  README.md  film-template.tex  package.yaml  stack.yaml  zamonia.cabal  zamonie.cabal
app/: Main.hs
src/: Zamonia.hs  Zamonie.hs
src/Zamonia/: Book.hs  Film.hs  Game.hs  Serie.hs  Series.hs  UI.hs  Work.hs
src/Zamonia/UI/: App.hs  Internal.hs  Series.hs
