cabal-version:  2.2
name:           zamonia
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/Luc-Saccoccio/zamonia>
homepage:       https://github.com/Luc-Saccoccio/zamonia
bug-reports:    https://github.com/Luc-Saccoccio/zamonia/issues
author:         Luc Saccoccio
maintainer:     Luc-Saccoccio
copyright:      2021 Luc Saccoccio
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/githubuser/zamonia

library
  exposed-modules:
      Zamonia
  other-modules:
      Paths_zamonia
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , aeson
    , sqlite-simple
    , cassava
    , sort
    , text
  default-language: Haskell2010

executable zamonia
  main-is: Main.hs
  other-modules:
      Paths_zamonia
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , optparse-applicative
    , aeson-pretty
    , aeson
    , text
    , bytestring
    , cassava
    , directory
    , zamonia
  default-language: Haskell2010

test-suite zamonia-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_zamonia
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , zamonia
  default-language: Haskell2010
