cabal-version:  3.0
name:           zamonia
version:        0.1.5.5
description:    Please see the README on GitHub at <https://github.com/Luc-Saccoccio/zamonia>
homepage:       https://github.com/Luc-Saccoccio/zamonia
bug-reports:    https://github.com/Luc-Saccoccio/zamonia/issues
author:         Luc Saccoccio
maintainer:     Luc-Saccoccio
copyright:      2021 Luc Saccoccio
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/Luc-Saccoccio/zamonia

library
  exposed-modules:
        Zamonia
      , Zamonia.Work
      , Zamonia.Film
      , Zamonia.Series
      , Zamonia.Book
  other-modules:
      Paths_zamonia
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , aeson
    , aeson
    , aeson-pretty
    , bytestring
    , cassava
    , text-replace
    , sqlite-simple
    , text
    , vector
  default-language: Haskell2010

executable zamonia
  main-is: Main.hs
  other-modules:
      Paths_zamonia
  hs-source-dirs:
      app
  ghc-options: -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , optparse-applicative
    , sqlite-simple
    , text
    , cassava
    , directory
    , zamonia
  default-language: Haskell2010

test-suite zamonia-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_zamonia
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , zamonia
  default-language: Haskell2010
